# newsbetter

./: .gitignore  README.md  entrypoint.py  mkdocs.yml  requirements.txt  setup.cfg  setup.py
NewsBetter/: __init__.py
NewsBetter.egg-info/: PKG-INFO  SOURCES.txt
docs/scripts/: generateFromDocstrings.bat  generateFromDocstrings.sh
src/NewsBetter.egg-info/: PKG-INFO  SOURCES.txt
