[metadata]
name = NewsBetter
version = 0.0.1
author = Shawn Ayotte
author_email = shawn.k.ayotte@gmail.com
description = Yet another RSS news reader
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SnakesAndLadders/newsbetter
project_urls =
    Bug Tracker = https://github.com/SnakesAndLadders/newsbetter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
